Fixed the z-index of Navbar

--- a/style/_vieolo-ui.scss
+++ b/style/_vieolo-ui.scss
@@ -2564,6 +2564,7 @@ body {
 .vieolo-navbar {
 	height: $navbar-height;
 	position: fixed;
+	z-index: 10;
 	top: 0;
 	left: 0;
 	right: 0;
